practica3/Examples/y.output
Terminals which are not used

   TOK_ASTERISCO
   TOK_ERROR


State 17 conflicts: 2 shift/reduce
State 18 conflicts: 2 shift/reduce


Grammar

    0 $accept: sentencias $end

    1 sentencias: sentencia
    2           | sentencia sentencias

    3 sentencia: sentencia_simple TOK_PUNTOYCOMA

    4 sentencia_simple: asignacion

    5 asignacion: identificador TOK_ASIGNACION exp

    6 exp: exp TOK_MAS exp
    7    | exp TOK_MENOS exp
    8    | identificador
    9    | constante

   10 identificador: TOK_IDENTIFICADOR

   11 constante: TOK_CONSTANTE_ENTERA


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_PUNTOYCOMA (258) 3
TOK_ASIGNACION (259) 5
TOK_MAS (260) 6
TOK_MENOS (261) 7
TOK_ASTERISCO (262)
TOK_IDENTIFICADOR (263) 10
TOK_CONSTANTE_ENTERA (264) 11
TOK_ERROR (265)


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
sentencias (12)
    on left: 1 2, on right: 0 2
sentencia (13)
    on left: 3, on right: 1 2
sentencia_simple (14)
    on left: 4, on right: 3
asignacion (15)
    on left: 5, on right: 4
exp (16)
    on left: 6 7 8 9, on right: 5 6 7
identificador (17)
    on left: 10, on right: 5 8
constante (18)
    on left: 11, on right: 9


state 0

    0 $accept: . sentencias $end

    TOK_IDENTIFICADOR  shift, and go to state 1

    sentencias        go to state 2
    sentencia         go to state 3
    sentencia_simple  go to state 4
    asignacion        go to state 5
    identificador     go to state 6


state 1

   10 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 10 (identificador)


state 2

    0 $accept: sentencias . $end

    $end  shift, and go to state 7


state 3

    1 sentencias: sentencia .
    2           | sentencia . sentencias

    TOK_IDENTIFICADOR  shift, and go to state 1

    $default  reduce using rule 1 (sentencias)

    sentencias        go to state 8
    sentencia         go to state 3
    sentencia_simple  go to state 4
    asignacion        go to state 5
    identificador     go to state 6


state 4

    3 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 9


state 5

    4 sentencia_simple: asignacion .

    $default  reduce using rule 4 (sentencia_simple)


state 6

    5 asignacion: identificador . TOK_ASIGNACION exp

    TOK_ASIGNACION  shift, and go to state 10


state 7

    0 $accept: sentencias $end .

    $default  accept


state 8

    2 sentencias: sentencia sentencias .

    $default  reduce using rule 2 (sentencias)


state 9

    3 sentencia: sentencia_simple TOK_PUNTOYCOMA .

    $default  reduce using rule 3 (sentencia)


state 10

    5 asignacion: identificador TOK_ASIGNACION . exp

    TOK_IDENTIFICADOR     shift, and go to state 1
    TOK_CONSTANTE_ENTERA  shift, and go to state 11

    exp            go to state 12
    identificador  go to state 13
    constante      go to state 14


state 11

   11 constante: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 11 (constante)


state 12

    5 asignacion: identificador TOK_ASIGNACION exp .
    6 exp: exp . TOK_MAS exp
    7    | exp . TOK_MENOS exp

    TOK_MAS    shift, and go to state 15
    TOK_MENOS  shift, and go to state 16

    $default  reduce using rule 5 (asignacion)


state 13

    8 exp: identificador .

    $default  reduce using rule 8 (exp)


state 14

    9 exp: constante .

    $default  reduce using rule 9 (exp)


state 15

    6 exp: exp TOK_MAS . exp

    TOK_IDENTIFICADOR     shift, and go to state 1
    TOK_CONSTANTE_ENTERA  shift, and go to state 11

    exp            go to state 17
    identificador  go to state 13
    constante      go to state 14


state 16

    7 exp: exp TOK_MENOS . exp

    TOK_IDENTIFICADOR     shift, and go to state 1
    TOK_CONSTANTE_ENTERA  shift, and go to state 11

    exp            go to state 18
    identificador  go to state 13
    constante      go to state 14


state 17

    6 exp: exp . TOK_MAS exp
    6    | exp TOK_MAS exp .
    7    | exp . TOK_MENOS exp

    TOK_MAS    shift, and go to state 15
    TOK_MENOS  shift, and go to state 16

    TOK_MAS    [reduce using rule 6 (exp)]
    TOK_MENOS  [reduce using rule 6 (exp)]
    $default   reduce using rule 6 (exp)


state 18

    6 exp: exp . TOK_MAS exp
    7    | exp . TOK_MENOS exp
    7    | exp TOK_MENOS exp .

    TOK_MAS    shift, and go to state 15
    TOK_MENOS  shift, and go to state 16

    TOK_MAS    [reduce using rule 7 (exp)]
    TOK_MENOS  [reduce using rule 7 (exp)]
    $default   reduce using rule 7 (exp)
